[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
flutter_rust_bridge = "1.68.0"
num = "0.4"
image = "0.24.3"
crossbeam = "0.8"
sha2 = "=0.10.2"
tiny-bip39 = "=1.0.0"
chia = { path = "../chia_rs", version = ">=0.2.4" }
chia-bls = { path = "../chia_rs/chia-bls", version = ">=0.2.4" }
chia-protocol = { path = "../chia_rs/chia-protocol" }
chia-utils-streamable-macro = { path = "./chia-utils-streamable-macro" }
clvm-utils = { path = "../chia_rs/clvm-utils" }
clvmr = { version = "0.2.6", features = ["pre-eval"] }
clvm_tools_rs = { git = "https://github.com/MarvinQuevedo/clvm_tools_rs.git", rev ='1b1313c308b3d6a124332027447062141a2ad60d' }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
serde_derive = "1.0"
serde_json = "1.0"
num-bigint = "=0.4.3"
blst = "0.3.10"
blake3 = "1.3.3"
hex = "0.4.3"
log = "0.4.17"
yaml-rust = "0.4"
linked-hash-map = "0.5.6"
regex = "1.5.4"
byteorder = "1.4.3"



[lib]
name = "rust_bls_flutter"
crate-type = ["cdylib", "staticlib"]

[target.'cfg(target_arch = "wasm32")']
rustflags = ["-C", "link-arg=-s", "-C", "link-arg=--no-entry"]

[[bin]]
name = "test"
path = "src/main.rs"
