[package]
name = "chia-utils-streamable-macro"
version = "0.2.4"
edition = "2021"
license = "Apache-2.0"
description = "Streamable derive macro for serializing/deserializing types in Chia protocol format"
authors = ["Arvid Norberg <arvid@libtorrent.org>"]
homepage = "https://github.com/Chia-Network/chia_rs/"
repository = "https://github.com/Chia-Network/chia_rs/"

 

[dependencies]
syn = { version = "2.0.27", features = ["full"] }
quote = "1.0.32"
proc-macro-crate = "1.3.1"
proc-macro2 = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
serde_derive = "1.0"
serde_json = "1.0"
num-bigint = "=0.4.3"
blst = "0.3.10"
blake3 = "1.3.3"
hex = "0.4.3"
log = "0.4.17"
yaml-rust = "0.4"
linked-hash-map = "0.5.6"
regex = "1.5.4"
byteorder = "1.4.3" 
num = "0.4"
sha2 = "=0.10.2"